pkg/cmd/kurel/testdata/webservice-expose-gateway/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    launcher.gokure.dev/component: web
  name: web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      labels:
        app: web
        launcher.gokure.dev/component: web
    spec:
      containers:
      - image: nginx:1.25
        name: web
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    launcher.gokure.dev/component: web
  name: web
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: web
    launcher.gokure.dev/component: web
  name: web
  namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: web
    launcher.gokure.dev/component: web
  name: web-httproute
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: web
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
